:recycle: refactor: update coupon structure